2008-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options):  "set term post ..." was losing options on
	the command that appeared after "fontfile 'foo' ".  Remove extraneous
	c_token++.

2008-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_encode_image PS_image):  If the palette size is
	limited by "set palette maxcolors" then we need to rescale [0:maxcolors]
	to [0:bitwidth] for the packed representation of the image in PostScript
	Bug #1869824

2008-04-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c:  Separate the status line from
	the plot canvas. XOR drawing is replaced by full overwrites.
	Status line no longer contains garbled text.
	Bug #1520692

	* config/config.nt: Disable many thousand compiler warnings from 
	Microsoft Visual Express C++ 2005.

2008-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
	found in a matrix data file, print an int_warn() message, set the value
	to NaN if it isn't already, and return to the caller normally. 
	This allows one to leave holes in a matrix data file.

2008-04-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:
	I have defined a new constant in wgnuplib.h WIN_PAL_COLORS.
	I don't know if the new value of 4096 is reasonable or not.
	Bug #1847768

2008-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/set.c src/show.c src/util.c (int_error):
	The worst-case fallback for int_error() uses a fixed length character
	array. This can be overrun by long error messages (it's a fallback
	for lack of snprintf).  Increase the size of the character array and
	also trim some very long error messages to a more reasonable size.

2008-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/sun.trm:  Rename local static variable "canvas" to "SUN_canvas"
	to avoid conflict with global of the same name.
